--- a/community/community.html
+++ b/community/community.html
@@ -206,10 +206,127 @@
 	</div>
   </div>
 
-  <button type="button" class="btn btn-transparet d-flex align-items-center gap-1">
+  <button type="button" class="btn btn-transparet d-flex align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#registerModal">
 	<i class="fa-solid fa-user-plus modal-email"></i>
 	<span class="p-navgroup-linkText modal-email d-none d-md-block " >Register</span>
   </button>
+
+   <!-- Modal -->
+   <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" >
+	  <div class="modal-content" style="border: 1px solid #6E5C8A;">
+		<div class="modal-header" style="border-bottom: 1px solid #6e5c8a">
+		  <h1 class="modal-title fs-5 " id="exampleModalLabel" style="color: #e2ddea; font-size: 14px !important; padding: 5px;">Register</h1>
+		  <!-- <button type="button" class="btn-close " data-bs-dismiss="modal" aria-label="Close"></button> -->
+		  <button type="button" class="btn btn-secondary fs-4" style="background: transparent; border: none; color: #907bb1;" data-bs-dismiss="modal">
+			<i class="fa-solid fa-xmark"></i>
+		  </button>
+		</div>
+		<div class="blocks block-container ml-0 mr-0">
+			<form action="./community.html" method="post" class="block">
+			<div class="block-container">
+			<div class="block-body" style="border: none !important;">
+			<dl class="formRow formRow--input">
+			<dt class="modal-email-dt">
+			<div class="formRow-labelWrapper">
+			<label class="formRow-label modal-email" for="_xfUid-1-1706288227">username</label>
+			<p class=" modal-email" >Required</p>
+			</div>
+			</dt>
+			<dd>
+			<input type="text" class="input input-email" name="login" autofocus="autofocus" autocomplete="username" id="_xfUid-1-1706288227" />
+			<label class="text-start" style="color: #9584B2;">This is the name that will be shown with your messages. You may use any name you wish.</label>
+			</dd>
+			</dl>
+			<dl class="formRow formRow--input">
+				<dt class="modal-email-dt">
+				<div class="formRow-labelWrapper">
+				<label class="formRow-label modal-email" for="_xfUid-1-1706288227">email</label>
+				<p class=" modal-email" for="_xfUid-1-1706288227">Required</p>
+				</div>
+				</dt>
+				<dd>
+				<input type="text" class="input input-email" name="login" autofocus="autofocus" autocomplete="username" id="_xfUid-1-1706288227" />
+				</dd>
+				</dl>
+			<dl class="formRow formRow--input">
+			<dt class="modal-email-dt">
+			<div class="formRow-labelWrapper">
+			<label class="formRow-label modal-email" for="_xfUid-2-1706288227">Password</label></div>
+			</dt>
+			<dd>
+			<div data-xf-init=" password-hide-show" data-show-text="Show" data-hide-text="Hide">
+			<div class="inputGroup inputGroup--joined">
+			<input type="password" name="password" value class="input input-email js-password input--passwordHideShow" autocomplete="current-password" id="_xfUid-2-1706288227" />
+			<div class="inputGroup-text">
+			<label class="iconic iconic--hideShow js-hideShowContainer">
+				<input type="checkbox" value="1" />
+				<!-- <i aria-hidden="true"></i> -->
+				
+				<span class="iconic-label" style="color: #9584B2;"><i class="bi bi-eye eye-color"></i>Show</span></label>
+			</div>
+			</div>
+			</div>
+			<p style="float: left; color: #9584B2;" class="modal-forget" data-xf-click="overlay">Entering a password is required.</p>
+			</dd>
+			</dl>
+			<dl class="formRow formRow--input">
+				<dt class="modal-email-dt">
+				<div class="formRow-labelWrapper">
+				<label class="formRow-label modal-email" for="_xfUid-1-1706288227">Verification</label>
+				<p class=" modal-email" >Required</p>
+				</div>
+				</dt>
+				<dd>
+				<!-- somthing in right side -->
+				<div class=" d-flex bg-light px-2 py-4 rounded text-start align-items-center" style="width: 50%; cursor: pointer;">
+
+					<a href="#" class=""> 
+						<div class="p-3 rounded verification-link" style="border: 1px solid rgb(145, 145, 145);"></div>
+					</a>
+					<label style="margin-left: 1rem;  color: #9584B2;"> I am human</label>
+				</div>
+				</dd>
+				</dl>
+			<dl class="formRow">
+			<dt class="modal-email-dt">
+			<div class="formRow-labelWrapper"></div>
+			</dt>
+			<dd>
+			<ul class="inputChoices">
+			<li class="inputChoices-choice form-check">
+				<!-- <label class="iconic" style="float: left;"> -->
+				<!-- <input class="form-check-input" checked type="checkbox" name="remember" value="1" checked="checked" />
+				<i aria-hidden="true"></i> -->
+				<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+				<span class="iconic-label" style="float: left;color: #9584B2;">I agree to the terms and privacy policy.</span></label>
+			</li>
+			</ul>
+			</dd>
+			</dl>
+			<input type="hidden" name="_xfRedirect" value />
+			</div>
+			</div>
+			<dl class="formRow">
+				<!-- <dt class="modal-email-dt"></dt> -->
+				<dd style="padding: 0;">
+				<div class="formSubmitRow-main" >
+				<div class="formSubmitRow-bar"></div>
+				<div class="formSubmitRow-controls" style="padding-left: 0; float: left;">
+					<button type="submit" class="button--primary button button--icon ">
+						<!-- <i class="fa-solid fa-lock icon-b"></i> -->
+					<span class="button-text">Register</span></button></div>
+				</div>
+				</dd>
+				</dl>
+			<input type="hidden" name="_xfToken" value="1706288227,456fb94b856657a26cb36a79600f38a9" />
+			
+			</form>
+			</div>
+	  </div>
+	</div>
+  </div>
+
   <button type="button" class="btn btn-transparet d-md-none d-lg-none" style="color: #907bb1;">
 	<i class="fa-solid fa-bolt-lightning"></i>
   </button>
