--- a/community/Register/register.html
+++ b/community/Register/register.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-<title>Log in</title>
+<title>Log in </title>
 <link rel="manifest" href="webmanifest.php">
 <meta name="theme-color" content="#e8e0f5" />
 <meta name="apple-mobile-web-app-title" content="INTERWEBZ">
@@ -446,16 +446,14 @@ Register
 <div class="blockMessage blockMessage--important blockMessage--iconic js-browserWarning" style="display: none">You are using an out of date browser. It may not display this or other websites correctly.<br/>You should upgrade or use an <a href="https://www.google.com/chrome/" target="_blank" rel="noopener">alternative browser</a>.</div>
 <div class="p-body-header">
 <div class="p-title ">
-<h1 class="p-title-value">Log in</h1>
+<h1 class="p-title-value">Register</h1>
 </div>
 </div>
 <div class="p-body-main  ">
 <div class="p-body-contentCol"></div>
 <div class="p-body-content is-active">
 <div class="p-body-pageContent">
-<div class="blockMessage blockMessage--error blockMessage--iconic">
-You must be logged-in to do that.
-</div>
+
 <div class="blocks block-container">
 <form action="/community/login/login" method="post" class="block">
 <div class="block-container">
@@ -463,21 +461,36 @@ You must be logged-in to do that.
 <dl class="formRow formRow--input">
 <dt>
 <div class="formRow-labelWrapper">
-<label class="formRow-label" for="_xfUid-1-1706288227">Your name or email address</label></div>
+    <label class="formRow-label modal-email" for="_xfUid-1-1706288227">Username</label>
+    <p class=" modal-email" >Required</p>
+</div>
 </dt>
+
 <dd>
-<input type="text" class="input" name="login" autofocus="autofocus" autocomplete="username" id="_xfUid-1-1706288227" />
+<input type="text" class="input input-email" name="login" autofocus="autofocus" autocomplete="username" id="_xfUid-1-1706288227" />
+<label class="text-start" style="color: #9584B2;">This is the name that will be shown with your messages. You may use any name you wish.</label>
 </dd>
 </dl>
 <dl class="formRow formRow--input">
+    <dt class="modal-email-dt">
+    <div class="formRow-labelWrapper">
+    <label class="formRow-label modal-email" for="_xfUid-1-1706288227">Email</label>
+    <p class=" modal-email" for="_xfUid-1-1706288227">Required</p>
+    </div>
+    </dt>
+    <dd>
+    <input type="text" class="input input-email" name="login" autofocus="autofocus" autocomplete="username" id="_xfUid-1-1706288227" />
+    </dd>
+    </dl>
+<dl class="formRow formRow--input">
 <dt>
 <div class="formRow-labelWrapper">
-<label class="formRow-label" for="_xfUid-2-1706288227">Password</label></div>
+<label class="formRow-label" for="_xfUid-2-1706288227" style="color: #9584B2;">Password</label></div>
 </dt>
 <dd>
 <div data-xf-init=" password-hide-show" data-show-text="Show" data-hide-text="Hide">
 <div class="inputGroup inputGroup--joined">
-<input type="password" name="password" value class="input js-password input--passwordHideShow" autocomplete="current-password" id="_xfUid-2-1706288227" />
+<input type="password" name="password" value class="input input-email js-password input--passwordHideShow" autocomplete="current-password" id="_xfUid-2-1706288227" />
 <div class="inputGroup-text">
 <label class="iconic iconic--hideShow js-hideShowContainer">
 	<input type="checkbox" value="1" />
@@ -487,25 +500,44 @@ You must be logged-in to do that.
 </div>
 </div>
 </div>
-<a href="/community/lost-password/" data-xf-click="overlay">Forgot your password?</a>
+<p style="float: left; color: #9584B2;" class="modal-forget" data-xf-click="overlay">Entering a password is required.</p>
 </dd>
 </dl>
+<dl class="formRow formRow--input">
+    <dt class="modal-email-dt">
+    <div class="formRow-labelWrapper">
+    <label class="formRow-label modal-email" for="_xfUid-1-1706288227">Verification</label>
+    <p class=" modal-email" >Required</p>
+    </div>
+    </dt>
+    <dd>
+    <!-- somthing in right side -->
+    <div class=" d-flex bg-light px-2 py-4 rounded text-start align-items-center" style="width: 50%; cursor: pointer;">
+
+        <a href="#" class=""> 
+            <div class="p-3 rounded verification-link" style="border: 1px solid rgb(145, 145, 145);"></div>
+        </a>
+        <label style="margin-left: 1rem;  color: #9584B2;"> I am human</label>
+    </div>
+    </dd>
+    </dl>
 <dl class="formRow">
 <dt>
 <div class="formRow-labelWrapper"></div>
 </dt>
 <dd>
 <ul class="inputChoices">
-<li class="inputChoices-choice">
-	<label class="iconic">
+<li class="inputChoices-choice px-0">
+	<!-- <label class="iconic">
 	<input class="form-check-input" checked type="checkbox" name="remember" value="1" checked="checked" />
-	<i aria-hidden="true"></i>
-	<span class="iconic-label">Stay logged in</span></label>
+	<i aria-hidden="true"></i> -->
+	<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+	<span class="iconic-label" style="color: #9584B2;">I agree to the terms and privacy policy.</span></label>
 </li>
 </ul>
 </dd>
 </dl>
-<dl class="formRow">
+<!-- <dl class="formRow">
 <dt></dt>
 <dd style="padding: 0;">
 <div class="formSubmitRow-main">
@@ -516,10 +548,22 @@ You must be logged-in to do that.
 	<span class="button-text">Log in</span></button></div>
 </div>
 </dd>
-</dl>
+</dl> -->
 <input type="hidden" name="_xfRedirect" value />
 </div>
 </div>
+<dl class="formRow">
+    <!-- <dt class="modal-email-dt"></dt> -->
+    <dd style="padding: 0;">
+    <div class="formSubmitRow-main" >
+    <div class="formSubmitRow-bar"></div>
+    <div class="formSubmitRow-controls" style="padding-left: 0; float: left;">
+        <button type="submit" class="button--primary button button--icon ">
+            <!-- <i class="fa-solid fa-lock icon-b"></i> -->
+        <span class="button-text">Register</span></button></div>
+    </div>
+    </dd>
+    </dl>
 <input type="hidden" name="_xfToken" value="1706288227,456fb94b856657a26cb36a79600f38a9" />
 </form>
 </div>
